[package]
name = "my-image-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
#eframe = { path = "/home/rizzi/Downloads/egui-master/crates/eframe" }

#egui_extras = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image", "svg"] }
#egui_extras = { path = "/home/rizzi/Downloads/egui-master/crates/egui_extras", features = ["image"] }

tempfile = "3.3.0"
rfd = "0.10.0"
image = "0.24.4"
#image = { version = "0.24.4", features = ["jpeg", "png"] }

#ehttp = "0.2.0"
#poll-promise = "0.1.0"