[package]
name = "my-image-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.19.0"
egui_extras = { version = "0.19.0", features = ["image", "svg"] }
tempfile = "3.3.0"
rfd = "0.10.0"
image = "0.24.4"